--- a/forexglobal/sass/blocks/inner/inner.scss
+++ b/forexglobal/sass/blocks/inner/inner.scss
@@ -19,6 +19,18 @@
   font-size: 60px;
   font-weight: 500;
   text-align: center;
+  
+  &--zulu {
+    margin: 0 0 10px 0;
+  }
+}
+
+.inner__sub {
+  margin: 0 0 40px 0;
+  color: $sc;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .inner__text {
