--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1861,6 +1861,9 @@ body {
     background: #b8b8b8; }
   .inner--zulu {
     padding: 80px 0; }
+    .inner--zulu .tab__content {
+      height: 317px;
+      overflow: scroll; }
 
 .inner__name {
   margin: 0 0 50px 0;
@@ -2576,12 +2579,13 @@ body {
   width: 13px;
   height: 20px;
   border: none;
-  background: transparent url("../img/pause-button-s.svg") no-repeat center;
-  background-size: 13px;
   -webkit-transition: 0.3s linear;
   transition: 0.3s linear;
   outline: none;
   cursor: pointer; }
+  .zulu__pause--inactive {
+    background: transparent url("../img/pause-button-s.svg") no-repeat center;
+    background-size: 13px; }
   .zulu__pause--active {
     background: transparent url("../img/pause-button-s-h.svg") no-repeat center;
     background-size: 13px; }
