--- a/forexglobal/sass/blocks/inner/zulu.scss
+++ b/forexglobal/sass/blocks/inner/zulu.scss
@@ -40,15 +40,15 @@
   position: absolute;
   right: 100px;
   bottom: 25px;
-  width: 100px;
+  width: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .zulu__pause {
-  width: 13px;
-  height: 20px;
+  width: 19px;
+  height: 25px;
   border: none;
   // background: transparent url('../img/pause-button-s.svg') no-repeat center;
   // background-size: 13px;
@@ -58,44 +58,44 @@
   
   &--inactive {
     background: transparent url('../img/pause-button-s.svg') no-repeat center;
-    background-size: 13px;
+    background-size: 19px;
   }
   
   &--active {
     background: transparent url('../img/pause-button-s-h.svg') no-repeat center;
-    background-size: 13px;
+    background-size: 19px;
   }
   
   &:hover {
     background: transparent url('../img/pause-button-s-h.svg') no-repeat center;
-    background-size: 13px;
+    background-size: 19px;
   }
 }
 
 .zulu__full {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   border: none;
   background: transparent url('../img/fullscreen-button.svg') no-repeat center;
-  background-size: 15px;
+  background-size: 20px;
   transition: 0.3s linear;
   outline: none;
   cursor: pointer;
   
   &--active {
     background: transparent url('../img/fullscreen-button-h.svg') no-repeat center;
-    background-size: 15px;
+    background-size: 20px;
   }
   
   &:hover {
     background: transparent url('../img/fullscreen-button-h.svg') no-repeat center;
-    background-size: 15px;
+    background-size: 20px;
   }
 }
 
 .zulu__muted {
-  width: 16px;
-  height: 18px;
+  width: 20px;
+  height: 22px;
   border: none;
   transition: 0.3s linear;
   outline: none;
@@ -103,17 +103,17 @@
   
   &--inactive {
     background: transparent url('../img/mute-button.svg') no-repeat center;
-    background-size: 16px;
+    background-size: 20px;
   }
   
   &--active {
     background: transparent url('../img/mute-button-h.svg') no-repeat center;
-    background-size: 16px;
+    background-size: 20px;
   }
   
   &:hover {
     background: transparent url('../img/mute-button-h.svg') no-repeat center;
-    background-size: 16px;
+    background-size: 20px;
   }
 }
 
@@ -143,7 +143,7 @@
     left: 0;
     bottom: -15px;
     width: inherit;
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 
@@ -177,13 +177,14 @@
     list-style-image: url('../img/webtrader-li.svg');
     
     &:first-child {
-      margin: 0 0 30px 0;
-      text-transform: uppercase;
+      // margin: 0 0 30px 0;
+      // font-weight: 500;
       list-style: none;
     }
   }
   
   &--second {
+    width: auto;
     
     li {
       
@@ -208,7 +209,7 @@
 .zulu__left {
   width: 570px;
   color: $sc;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   
   a {
