--- a/prizma/sass/blocks/button.scss
+++ b/prizma/sass/blocks/button.scss
@@ -4,9 +4,7 @@
   width: 170px;
   color: #fff;
   font-size: 14px;
-  font-style: normal;
-  font-weight: normal;
-  font-family: 'Proxima Nova Rg', sans-serif;
+  font-family: 'ProximaNova-Regular', sans-serif;
   text-align: center;
   text-decoration: none;
   border-radius: 17px;
