--- a/prizma/sass/blocks/nav.scss
+++ b/prizma/sass/blocks/nav.scss
@@ -16,7 +16,7 @@
   position: relative;
   display: block;
   width: 100%;
-  padding: 0 75px 0 15px;
+  padding: 0 0 0 15px;
   color: #000;
   font-size: 16px;
   font-family: 'ProximaNova-Regular', sans-serif;
@@ -31,7 +31,7 @@
     background: #fff;
     
     &:before {
-      width: 99%;
+      width: 99% !important;
     }
   }
   
@@ -46,9 +46,9 @@
   //   width: 99%;
   // }
   
-  &:hover + .nav__sublist {
-    clip: auto;
-  }
+  // &:hover + .nav__sublist {
+  //   clip: auto;
+  // }
   
   &:before {
     content: '';
@@ -64,18 +64,27 @@
 
 .nav__sublist {
   position: absolute;
-  top: 0;
+  top: -500px;
   left: 200px;
+  display: block;
   width: 300px;
   margin: 0;
   padding: 0;
+  transition: 0.5s;
   list-style: none;
   background: #fff;
-  clip: rect(0, 0, 0, 0);
+  // opacity: 0;
+  // clip: rect(0, 0, 0, 0);
   
-  &:hover {
-    clip: auto;
+  &--active {
+    // clip: auto;
+    // opacity: 1;
+    top: 0;
   }
+  
+  // &:hover {
+  //   clip: auto;
+  // }
 }
 
 .nav__subitem {
