--- a/prizma/js/slick/slick-theme.css
+++ b/prizma/js/slick/slick-theme.css
@@ -122,11 +122,15 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    top: 50px;
+    left: 130px;
+    /* bottom: -25px; */
 
-    display: block;
+    display: flex;
+    align-items: baseline;
 
-    width: 100%;
+    /* width: 100%; */
+    /* height: 80px; */
     padding: 0;
     margin: 0;
 
@@ -141,11 +145,44 @@
     display: inline-block;
 
     width: 20px;
-    height: 20px;
+    /* height: 60px; */
     margin: 0 5px;
     padding: 0;
-
+    
+    color: #000;
+    font-size: 16px;
+    font-family: 'ProximaNova-Regular', sans-serif;
+    transition: 0.5s;
+    transition-delay: 0.3s;
     cursor: pointer;
+}
+.slick-dots .slick-active {
+  width: 35px;
+  height: 60px;
+  color: #1500d9;
+  font-size: 60px;
+  font-family: 'ProximaNova-Bold', sans-serif;
+}
+.slick-dots .slick-active:before {
+  content: '';
+  position: absolute;
+  top: -145px;
+  left: 50%;
+  width: 1px;
+  height: 0px;
+  background: linear-gradient( 90deg, rgb(21,0,217) 0%, rgb(97,163,219) 100%);
+  animation-name: point;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+@keyframes point {
+  0% {
+    
+  }
+  
+  100% {
+    height: 160px;
+  }
 }
 .slick-dots li button
 {
