--- a/prizma/sass/blocks/slider.scss
+++ b/prizma/sass/blocks/slider.scss
@@ -1,9 +1,9 @@
 .slider {
-
+  overflow: hidden;
 }
 
 .slider__container {
-  width: 1200px;
+  width: 1170px;
   height: inherit;
   margin: auto;
   padding: 0 15px;
@@ -14,6 +14,7 @@
   
   b {
     font-size: 30px;
+    font-weight: normal;
     font-family: 'ProximaNova-Bold', sans-serif;
   }
   
