--- a/prizma/sass/style.scss
+++ b/prizma/sass/style.scss
@@ -8,3 +8,9 @@
 @import 'blocks/nav';
 @import 'blocks/slider';
 @import 'blocks/step';
+@import 'blocks/banner';
+@import 'blocks/edge';
+@import 'blocks/info';
+@import 'blocks/multyplatform';
+@import 'blocks/ready';
+@import 'blocks/payment';
