--- a/prizma/js/slick/slick-theme.css
+++ b/prizma/js/slick/slick-theme.css
@@ -116,7 +116,7 @@
 /* Dots */
 .slick-dotted.slick-slider
 {
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .slick-dots
@@ -130,7 +130,7 @@
     align-items: baseline;
 
     /* width: 100%; */
-    /* height: 80px; */
+    /* height: 180px; */
     padding: 0;
     margin: 0;
 
@@ -144,9 +144,9 @@
 
     display: inline-block;
 
-    width: 20px;
-    /* height: 60px; */
-    margin: 0 5px;
+    /* width: 20px; */
+    /* height: 20px; */
+    margin: 0 10px;
     padding: 0;
     
     color: #000;
@@ -157,8 +157,8 @@
     cursor: pointer;
 }
 .slick-dots .slick-active {
-  width: 35px;
-  height: 60px;
+  /* width: 35px; */
+  /* height: 60px; */
   color: #1500d9;
   font-size: 60px;
   font-family: 'ProximaNova-Bold', sans-serif;
