--- a/prizma/sass/blocks/button.scss
+++ b/prizma/sass/blocks/button.scss
@@ -29,4 +29,13 @@
     background: url('../img/button-login.svg') no-repeat right;
     background-size: 12px;
   }
+  
+  &--white {
+    color: $sc;
+    background: #fff;
+    
+    &:hover {
+      box-shadow: 0px 0px 11px 5px rgba(255, 255, 255, 0.3);
+    }
+  }
 }
