--- a/prizma/sass/blocks/step.scss
+++ b/prizma/sass/blocks/step.scss
@@ -4,7 +4,7 @@
 }
 
 .step__name {
-  margin: 0 0 30px 0;
+  margin: 0 0 70px 0;
   font-size: 30px;
   font-weight: normal;
   font-family: 'ProximaNova-Bold', sans-serif;
@@ -18,7 +18,9 @@
 }
 
 .step__box {
+  position: relative;
   width: 250px;
+  z-index: 1;
   
   b {
     font-size: 30px;
@@ -36,5 +38,44 @@
   
   p {
     font-family: 'ProximaNova-Light', sans-serif;
+  }
+  
+  &:before {
+    content: '';
+    position: absolute;
+    top: -60px;
+    left: -30px;
+    color: #fff;
+    font-size: 100px;
+    font-family: 'ProximaNova-Bold', sans-serif;
+    z-index: -1;
+  }
+  
+  &--1 {
+    
+    &:before {
+      content: '1';
+    }
+  }
+  
+  &--2 {
+    
+    &:before {
+      content: '2';
+    }
+  }
+  
+  &--3 {
+    
+    &:before {
+      content: '3';
+    }
+  }
+  
+  &--4 {
+    
+    &:before {
+      content: '4';
+    }
   }
 }
