--- a/prizma/sass/global/base.scss
+++ b/prizma/sass/global/base.scss
@@ -4,8 +4,9 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 1170px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 @media screen and ($tablet-widths) {
