--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -609,3 +609,100 @@ body {
     width: 40px;
     height: 14px;
     background: url("../img/payment-skrill.svg") no-repeat center; }
+
+.footer {
+  padding: 30px 0;
+  background: #4c4e50; }
+
+.footer__logo {
+  display: block;
+  width: 170px;
+  height: 21px;
+  margin: auto; }
+
+.footer__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 50px 0 30px 0;
+  padding: 0;
+  list-style: none; }
+  .footer__links li {
+    color: #fff; }
+    .footer__links li a {
+      color: #fff;
+      font-size: 16px;
+      font-family: 'ProximaNova-Bold', sans-serif;
+      text-decoration: none; }
+
+.footer__hr {
+  width: 100%;
+  height: 1px;
+  margin: 0;
+  border: none;
+  background: #fff; }
+
+.footer__name {
+  display: block;
+  margin: 30px 0 20px 0;
+  color: #fff;
+  font-weight: normal;
+  font-family: 'ProximaNova-Light', sans-serif;
+  text-align: center;
+  text-transform: uppercase; }
+
+.footer__text {
+  margin: 0 0 30px 0;
+  color: #fff;
+  font-family: 'ProximaNova-Light', sans-serif; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 30px 0 0 0; }
+
+.footer__copyright {
+  margin: 0;
+  color: #fff;
+  font-family: 'ProximaNova-Light', sans-serif; }
+
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 370px;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.footer__item {
+  display: block;
+  width: 15px;
+  height: 15px; }
+  .footer__item--fb {
+    background: url("../img/social-footer-fb.svg") no-repeat center; }
+  .footer__item--gp {
+    background: url("../img/social-footer-gp.svg") no-repeat center; }
+  .footer__item--in {
+    background: url("../img/social-footer-in.svg") no-repeat center; }
+  .footer__item--tw {
+    background: url("../img/social-footer-tw.svg") no-repeat center; }
