--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2796,3 +2796,134 @@ body {
     width: 300px;
     height: 300px;
     background-size: 300px; } }
+
+.register {
+  padding: 150px 0 70px 0; }
+
+.register__name {
+  margin: 0;
+  color: #2f2861;
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center; }
+
+.register__subname {
+  margin: 0 0 50px 0;
+  color: #2f2861;
+  font-size: 30px;
+  font-weight: 300;
+  text-align: center; }
+
+.register__form input {
+  width: 478px;
+  height: 41px;
+  padding: 0 10px;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: inherit;
+  border: 1px solid #2f2861;
+  border-radius: 3px;
+  outline: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .register__form input::-webkit-input-placeholder {
+    color: #c1c1c1;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .register__form input:-ms-input-placeholder {
+    color: #c1c1c1;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .register__form input::-ms-input-placeholder {
+    color: #c1c1c1;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .register__form input::placeholder {
+    color: #c1c1c1;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .register__form input:focus {
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35); }
+    .register__form input:focus::-webkit-input-placeholder {
+      color: #2f2861; }
+    .register__form input:focus:-ms-input-placeholder {
+      color: #2f2861; }
+    .register__form input:focus::-ms-input-placeholder {
+      color: #2f2861; }
+    .register__form input:focus::placeholder {
+      color: #2f2861; }
+
+.register__form select {
+  width: 500px;
+  height: 41px;
+  padding: 0 10px;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: inherit;
+  border: 1px solid #2f2861;
+  border-radius: 3px;
+  background: transparent url("../img/nav-arrow.svg") no-repeat center;
+  background-size: 10px;
+  background-position-x: 480px;
+  outline: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+  .register__form select:focus {
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35); }
+    .register__form select:focus::-webkit-input-placeholder {
+      color: #2f2861; }
+    .register__form select:focus:-ms-input-placeholder {
+      color: #2f2861; }
+    .register__form select:focus::-ms-input-placeholder {
+      color: #2f2861; }
+    .register__form select:focus::placeholder {
+      color: #2f2861; }
+
+.register__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0 0 10px 0; }
+
+.register__email {
+  width: 500px;
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center; }
+
+.register__next {
+  width: 150px;
+  margin: 25px 0 0 auto;
+  padding: 10px 0;
+  color: #2f2861;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: inherit;
+  border: none;
+  border-radius: 3px;
+  background: #fac93e;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .register__next:hover {
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    background: #ffd800; }
+
+@media screen and (max-width: 1200px) {
+  .register {
+    padding: 200px 0 70px 0; } }
+
+@media screen and (max-width: 768px) {
+  .register {
+    padding: 100px 0 0 0; }
+  .register__name {
+    margin: 0 0 20px 0;
+    font-size: 40px; } }
