--- a/forexglobal/sass/blocks/inner/register.scss
+++ b/forexglobal/sass/blocks/inner/register.scss
@@ -1,5 +1,10 @@
 .register {
   padding: 150px 0 70px 0;
+  
+  a {
+    color: #6420ff;
+    text-decoration: none;
+  }
 }
 
 .register__name {
@@ -18,6 +23,14 @@
   text-align: center;
 }
 
+.register__subsubname {
+  margin: 50px 0 10px 0;
+  color: #6420ff;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+}
+
 .register__form {
   
   input {
@@ -31,6 +44,17 @@
     border-radius: 3px;
     outline: none;
     transition: 0.3s;
+    
+    &[type='radio'],
+    &[type='checkbox'] {
+      width: auto;
+      height: auto;
+      margin: 0 10px;
+      
+      &:focus {
+        box-shadow: none;
+      }
+    }
     
     &::placeholder {
       color: #c1c1c1;
@@ -76,10 +100,15 @@
   display: flex;
   justify-content: space-between;
   margin: 0 0 10px 0;
+  
+  &--center {
+    justify-content: center;
+  }
 }
 
 .register__email {
   width: 500px;
+  color: $sc;
   font-size: 14px;
   font-weight: 300;
   text-align: center;
@@ -87,7 +116,7 @@
 
 .register__next {
   width: 150px;
-  margin: 25px 0 0 auto;
+  margin: 25px 0 25px auto;
   padding: 10px 0;
   color: $sc;
   font-size: 18px;
@@ -102,6 +131,50 @@
     box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
     background: #ffd800;
   }
+}
+
+.register__warning {
+  margin: 0;
+  padding: 20px 10px;
+  color: $sc;
+  font-weight: 300;
+  text-align: center;
+  border: 1px solid #6420ff;
+  border-radius: 3px;
+  
+  b {
+    display: block;
+    margin: 0 0 10px 0;
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
+
+.register__question {
+  display: block;
+  margin: 40px 0 10px 0;
+  color: $sc;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.register__label {
+  color: $sc;
+  font-size: 14px;
+  font-weight: 300;
+  
+  &--checkbox {
+    width: 500px;
+    margin: 40px 0 0 0;
+  }
+}
+
+.register__hr {
+  height: 1px;
+  margin: 50px 0;
+  border: none;
+  background: #6420ff;
 }
 
 @media screen and ($tablet-widths) {
