--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2799,9 +2799,6 @@ body {
 
 .register {
   padding: 150px 0 70px 0; }
-  .register a {
-    color: #6420ff;
-    text-decoration: none; }
 
 .register__name {
   margin: 0;
@@ -2968,6 +2965,9 @@ body {
   .register__label--checkbox {
     width: 500px;
     margin: 40px 0 0 0; }
+    .register__label--checkbox a {
+      color: #6420ff;
+      text-decoration: none; }
 
 .register__hr {
   height: 1px;
@@ -2975,13 +2975,56 @@ body {
   border: none;
   background: #6420ff; }
 
+.register__demo {
+  color: #6420ff;
+  text-decoration: none; }
+
 @media screen and (max-width: 1200px) {
   .register {
-    padding: 200px 0 70px 0; } }
+    padding: 200px 0 70px 0; }
+  .register__form {
+    padding: 0 15px; }
+    .register__form input {
+      width: 350px; }
+    .register__form select {
+      width: 372px;
+      background-position-x: 350px; }
+  .register__flex {
+    -ms-flex-pack: distribute;
+    justify-content: space-around; }
+  .register__email {
+    width: 372px; }
+  .register__warning {
+    margin: 0 15px; } }
 
 @media screen and (max-width: 768px) {
   .register {
-    padding: 100px 0 0 0; }
+    padding: 100px 0 50px 0; }
   .register__name {
     margin: 0 0 20px 0;
-    font-size: 40px; } }
+    font-size: 40px; }
+  .register__form input {
+    width: 278px;
+    margin: 0 0 10px 0; }
+  .register__form select {
+    width: 300px;
+    margin: 0 0 10px 0;
+    background-position-x: 280px; }
+  .register__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0; }
+  .register__email {
+    width: auto; }
+  .register__next {
+    margin: 25px auto; }
+  .register__label--checkbox {
+    width: auto; }
+  .register__demo {
+    display: block;
+    text-align: center; } }
