--- a/forexglobal/sass/blocks/inner/register.scss
+++ b/forexglobal/sass/blocks/inner/register.scss
@@ -1,10 +1,5 @@
 .register {
   padding: 150px 0 70px 0;
-  
-  a {
-    color: #6420ff;
-    text-decoration: none;
-  }
 }
 
 .register__name {
@@ -167,6 +162,11 @@
   &--checkbox {
     width: 500px;
     margin: 40px 0 0 0;
+    
+    a {
+      color: #6420ff;
+      text-decoration: none;
+    }
   }
 }
 
@@ -177,19 +177,89 @@
   background: #6420ff;
 }
 
+.register__demo {
+  color: #6420ff;
+  text-decoration: none;
+}
+
 @media screen and ($tablet-widths) {
   .register {
     padding: 200px 0 70px 0;
+  }
+  
+  .register__form {
+    padding: 0 15px;
+    
+    input {
+      width: 350px;
+    }
+    
+    select {
+      width: 372px;
+      background-position-x: 350px; 
+    }
+  }
+  
+  .register__flex {
+    justify-content: space-around;
+  }
+  
+  .register__email {
+    width: 372px;
+  }
+  
+  .register__warning {
+    margin: 0 15px;
   }
 }
 
 @media screen and ($mobile-widths) {
   .register {
-    padding: 100px 0 0 0;
+    padding: 100px 0 50px 0;
   }
   
   .register__name {
     margin: 0 0 20px 0;
     font-size: 40px;
+  }
+  
+  .register__form {
+    
+    input {
+      width: 278px;
+      margin: 0 0 10px 0;
+    }
+    
+    select {
+      width: 300px;
+      margin: 0 0 10px 0;
+      background-position-x: 280px; 
+    }
+  }
+  
+  .register__flex {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+  
+  .register__email {
+    width: auto;
+  }
+  
+  .register__next {
+    margin: 25px auto;
+  }
+  
+  .register__label {
+    
+    &--checkbox {
+      width: auto;
+    }
+  }
+  
+  .register__demo {
+    display: block;
+    text-align: center;
   }
 }
